--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,16 +3,11 @@ name: env_weather_app
 ## pull request on the main branch
 on: [pull_request, push]
 
-env:
-  ## Sets environment variable
-  API_KEY: test-env-wa
-
 jobs:
   job1:
-    ## The type of runner that the job will run on,
-    ## here it runs on ubuntu latest
+    ## The type of runner that the job will run on
     runs-on: ubuntu-latest
     steps:
       - name: step 1
         ## Reference your environment variables
-        run: echo "The API key is:${{env.API_KEY}}"
+        run: echo "The API key is:${{secrets.WA_KEY}}"
