--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,10 @@ jobs:
     ## The type of runner that the job will run on
     runs-on: ubuntu-latest 
     steps:
-      - name: step 1
+      - name: creation of environment variables 
       env:
         WA_KEY: ${{ secrets.WA_KEY }}
-      run: echo "The API key is:${{ secrets.WA_KEY }}"
+
+      - name: deployment of environment variables
+      run:
+          echo "The API key is:${{ secrets.WA_KEY }}"
